octave2.1 (1:2.1.73-5) unstable; urgency=low

  NOT YET RELEASED!

  [ Rafael Laboissiere ]
  * Uploaded to unstable, now that the libhdf5 transition is over

 --

octave2.1 (1:2.1.73-4) experimental; urgency=low

  * debian/in/octave2.1-00list: Added 50_g++4.1-fixes to the list

 -- Rafael Laboissiere <rafael@debian.org>  Mon,  3 Apr 2006 14:44:34 +0200

octave2.1 (1:2.1.73-3) experimental; urgency=low

  * Uploading to experimental until the hdf5 transition is finished
  * debian/patches/50_g++4.1-fixes.dpatch: Allow compilation with g++ 4.1
  * debian/rules:
    - Cruft removal
    - Mode robust treatment of changed files in doc/ such that there is no
      problem at creation of the diff.gz file

 -- Rafael Laboissiere <rafael@debian.org>  Mon,  3 Apr 2006 09:11:21 +0200

octave2.9 (2.9.5-2) experimental; urgency=low

  * debian/in/control: Build-Depends on slice (closes: #360219)

 -- Rafael Laboissiere <rafael@debian.org>  Fri, 31 Mar 2006 22:34:14 +0200

octave2.9 (2.9.5-1) experimental; urgency=low

  * New upstream release, released to the experimental distribution until
    the hdf5 transition is over
  * Redesigned the build & install processes for the html documentation,
    since it is now shipped in HTML directories under doc/.
  * debian/in/octave2.9-00list: Removed from the list the following
    patches:
    - 50_install-liboctinterp
    - 50_glpk-sparse
    - 50_octave-mod-bind-m-bs-2.9
    - 70_octave-mod-honor-auto-indent
    which have been applied upstream, and:
    - 50_mkoctfile.1-no-negative
    which does not seem to be necessary.

 -- Rafael Laboissiere <rafael@debian.org>  Thu, 30 Mar 2006 13:10:49 +0200

octave2.1 (1:2.1.73-2) unstable; urgency=low

  * debian/in/control: Adjusted dependencies on libhdf5 >= 1.6.5 (both
    Build-Depends and octave<version>-headers Depends)

 -- Rafael Laboissiere <rafael@debian.org>  Wed, 29 Mar 2006 21:25:24 +0200

octave2.1 (1:2.1.73-1) unstable; urgency=low

  [ Thomas Weber ]